# letsrolld

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.json  directors.csv  download_data.sh  films_to_director.py  main.py  pyproject.toml  recommend.py  renovate.json  requirements.txt  sanity-check.sh  shorts.json  swagger.json
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: mypy.yml  pre-commit.yml  pytest.yml  ruff.yml  sanity-check.yml  swagger-validate.yml  swagger.yml
alembic/: env.py
alembic/versions/: 4cb954338884_add_offers_table.py  51fcb0356ea9_add_last_offers_.py  53ba03dbc56d_add_last_checked_to_films_table.py  6583b50e5924_initial_tables.py  6aeef95710d1_add_primary_keys_to_association_tables.py  853345b1c2f1_add_offer_url.py  8e251e9b7a42_add_monetization_type.py  beaf829c5421_add_checked_at_to_directors_table.py  beaf829c5421_add_last_checked_to_directors_table.py  fef03ede01d5_add_trailer_urls.py
configs/: default.json  shorts.json
js/: README.md  package.json
js/.openapi-generator/: FILES
js/docs/: ArrayOfDirectors.md  ArrayOfFilms.md  ArrayOfReports.md  DefaultApi.md  Director.md  DirectorFilmsInner.md  DirectorFilmsInnerCountriesInner.md  DirectorFilmsInnerOffersInner.md  DirectorInfo.md  Film.md  Report.md  ReportSectionsInner.md
js/src/: ApiClient.js  index.js
js/src/api/: DefaultApi.js
js/src/model/: ArrayOfDirectors.js  ArrayOfFilms.js  ArrayOfReports.js  Director.js  DirectorFilmsInner.js  DirectorFilmsInnerCountriesInner.js  DirectorFilmsInnerOffersInner.js  DirectorInfo.js  Film.js  Report.js  ReportSectionsInner.js
js/test/api/: DefaultApi.spec.js
js/test/model/: ArrayOfDirectors.spec.js  ArrayOfFilms.spec.js  ArrayOfReports.spec.js  Director.spec.js  DirectorFilmsInner.spec.js  DirectorFilmsInnerCountriesInner.spec.js  DirectorFilmsInnerOffersInner.spec.js  DirectorInfo.spec.js  Film.spec.js  Report.spec.js  ReportSectionsInner.spec.js
letsrolld/: base.py  colors.py  config.py  csv.py  director.py  directorlist.py  film.py  filmlist.py  http.py  justwatch.py  watchlist.py
letsrolld-api-client/: README.md  pyproject.toml
letsrolld-api-client/letsrolld_api_client/: __init__.py
letsrolld-api-client/letsrolld_api_client/api/default/: get_directors.py  get_directors_id.py  get_films.py  get_films_id.py  get_reports.py  get_reports_id.py
letsrolld-api-client/letsrolld_api_client/models/: __init__.py  array_of_directors_item.py  array_of_directors_item_films_item.py  array_of_directors_item_films_item_countries_item.py  array_of_directors_item_films_item_directors_item.py  array_of_directors_item_films_item_offers_item.py  array_of_directors_item_info.py  array_of_films_item.py  array_of_films_item_countries_item.py  array_of_films_item_directors_item.py  array_of_films_item_offers_item.py  array_of_reports_item.py  array_of_reports_item_sections_item.py  array_of_reports_item_sections_item_films_item.py  array_of_reports_item_sections_item_films_item_countries_item.py  array_of_reports_item_sections_item_films_item_directors_item.py  array_of_reports_item_sections_item_films_item_offers_item.py  director.py  director_films_item.py  director_films_item_countries_item.py  director_films_item_directors_item.py  director_films_item_offers_item.py  director_info.py  film.py  film_countries_item.py  film_directors_item.py  film_offers_item.py  report.py  report_sections_item.py  report_sections_item_films_item.py  report_sections_item_films_item_countries_item.py  report_sections_item_films_item_directors_item.py  report_sections_item_films_item_offers_item.py
scripts/: download_data.sh  email.sh  gen_report.sh  sanity-check.sh
src/letsrolld/: base.py  colors.py  config.py  csv.py  director.py  directorlist.py  film.py  filmlist.py  http.py  justwatch.py
src/letsrolld/cmd/: cleanup.py  db_init.py  directors.py  dump_directors.py  fetch_directors.py  get_directors.py  populate_directors.py  recommend.py  update.py  update_directors.py  update_films.py
src/letsrolld/db/: __init__.py  models.py
src/letsrolld/webapi/: app.py  models.py
src/letsrolld/webcli/: cli.py
src/letsrolld/webcli/templates/: director.j2  director.template  film-full.j2  film-full.template  film.template  report-full.j2  report.j2
tests/: test_film.py
tests/files/: directors.csv
ts/.openapi-generator/: FILES
ts/api/: defaultApi.ts
ts/model/: arrayOfDirectors.ts  arrayOfFilms.ts  arrayOfReports.ts  director.ts  directorFilmsInner.ts  directorFilmsInnerCountriesInner.ts  directorFilmsInnerOffersInner.ts  directorInfo.ts  film.ts  models.ts  report.ts  reportSectionsInner.ts
ui/: .gitignore  index.html  index.js  package-lock.json  package.json
ui/css/: main.css  main.css.map  reset.css.map
ui/css/abstracts/: variables.css.map
ui/scripts/: button.js  modal.js  movie.js  offers.js  variables.js
ui/scss/: main.scss
ui/scss/abstracts/: _variables.scss
ui/scss/base/: _base.scss
ui/scss/components/: _button.scss  _flags.scss  _modal.scss  _movie-card.scss  _offers.scss
ui/scss/layout/: _navigation.scss
ui/scss/pages/: _home.scss
