[project]
name = "letsrolld"
version = "0.1.0"
description = "Letsrolld, movie recommendation engine"
authors = [
    {name = "Ihar Hrachyshka", email = "ihar.hrachyshka@gmail.com"},
]
dependencies = [
    "beautifulsoup4",
    # TODO: remove this dependency
    "requests",
    # TODO: vendorize this dependency, or otherwise replace it
    "simple-justwatch-python-api",
    "SQLAlchemy>=2.0.27",
    "alembic>=1.13.1",
    "flask-restful-swagger-3 @ git+https://github.com/booxter/flask-restful-swagger-3@master",
    "letsrolld-api-client @ git+https://github.com/booxter/letsrolld-client.git",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.6.2",
    "pytest>=8.0.1",
]

[project.scripts]
# TODO: remove these obsolete scripts
recommend = "letsrolld.cmd.recommend:main"
directors = "letsrolld.cmd.directors:main"

db-init = "letsrolld.cmd.db_init:main"
populate-directors = "letsrolld.cmd.populate_directors:main"
update-directors = "letsrolld.cmd.update:directors_main"
update-films = "letsrolld.cmd.update:films_main"
update-offers = "letsrolld.cmd.update:offers_main"
cleanup = "letsrolld.cmd.cleanup:main"

# webapi
webapp = "letsrolld.webapi.app:main"
